<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="알림"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_monthly_alarm"
            android:title="매월 영화 알림"
            app:iconSpaceReserved="false" />
        <Preference
            android:summary="자신이 등록한 개봉 알림을 설정할 수 있습니다"
            android:title="개봉 알림"
            android:key="@string/key_release_alarm"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_company_alarm"
            android:summary="자신이 등록한 제작사 알림을 설정할 수 있습니다"
            android:title="제작사 알림"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="개인 정보"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/key_region"
            android:title="지역 설정"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="@string/key_clear_search_history"
            android:title="검색 기록 삭제"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="앱 정보"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/key_app_info"
            android:title="앱 정보"
            app:iconSpaceReserved="false" />
        <!--<PreferenceScreen
            android:title="라이센스"
            app:iconSpaceReserved="false">

        </PreferenceScreen>-->

    </PreferenceCategory>
</PreferenceScreen>