<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/content_title"
            fontPath="@string/NanumBarunGothicBold_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12.3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:includeFontPadding="false"
            android:text="@string/text_applied_company"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/manage_btn"
            fontPath="@string/NanumBarunGothicUltraLight_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/content_title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:foreground="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:text="@string/text_manage"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/content_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_content_list"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/margin_content_list"
            android:layout_marginBottom="10dp" />

        <FrameLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/empty_anim"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:lottie_fileName="lottie/not_found.json"
                app:lottie_loop="true"
                app:lottie_scale="0.2" />

            <TextView
                fontPath="@string/NanumBarunGothicBold_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/empty_text" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>