<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Main.Setting.AppInfo.AppInfoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_alignParentTop="true"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                fontPath="@string/NanumBarunGothicUltraLight_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:includeFontPadding="false"
                android:text="앱 정보"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="MissingPrefix" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/app_name"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@string/NanumBarunGothicBold_path"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@string/NanumBarunGothic_path"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/app_developer_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:autoLink="web|email"
        android:fontFamily="@string/NanumBarunGothicUltraLight_path"
        android:text="개발자 연락처\nwoochang4862@gmail.com"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>