<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.main.setting.company_alarm.CompanyAlarmSettingFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SoonAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_company_alarm" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/alarm_switch"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:id="@+id/shimmer"
            android:layout_marginStart="@dimen/margin_content_list"
            android:layout_marginEnd="@dimen/margin_content_list"
            android:layout_height="wrap_content">

            <include layout="@layout/layout_companny_alarm_shimmer"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/company_alarm_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_content_list"
            android:layout_marginEnd="@dimen/margin_content_list"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/list_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/list_empty_anim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lottie_fileName="lottie/empty_notification.json"
                app:lottie_loop="true"
                app:lottie_scale="1" />

            <TextView
                fontPath="@string/NanumBarunGothicBold_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/empty_company_notification_text"
                tools:ignore="MissingPrefix" />
        </FrameLayout>

    </FrameLayout>

</LinearLayout>