<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_genre_nestedscrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".View.Main.Genre.GenreFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
            style="@style/SoonAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_genre" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_content_list"
                android:layout_marginEnd="@dimen/margin_content_list"
                android:visibility="gone"
                app:shimmer_auto_start="true">

                <include layout="@layout/layout_genre_shimmer" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_genre_genre_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_content_list"
                android:layout_marginEnd="@dimen/margin_content_list"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/list_empty_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="visible">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/list_empty_anim"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:lottie_fileName="lottie/empty_movie.json"
                    app:lottie_loop="true"
                    app:lottie_scale="1" />

                <TextView
                    fontPath="@string/NanumBarunGothicBold_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/empty_text"
                    tools:ignore="MissingPrefix" />
            </FrameLayout>

        </FrameLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>