<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SearchCompanyActivity">

    <RelativeLayout
        android:id="@+id/activity_search_company_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="5dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/activity_search_company_back_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/activity_search_company_searchview"
            style="@style/AppSearchView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/activity_search_company_back_btn"
            android:background="@null"
            android:focusable="true"
            android:focusedByDefault="true"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="제작사를 검색해 보세요"
            app:searchIcon="@null"></androidx.appcompat.widget.SearchView>

        <ImageView
            android:id="@+id/activity_search_company_search_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/activity_search_company_searchview"
            android:src="@drawable/ic_search_black_24dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_search_company_header"
        android:layout_marginBottom="58dp"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/activity_search_company_checkbox_all"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/fragment_common_side_padding"
            android:layout_marginRight="@dimen/fragment_common_side_padding"
            android:layout_marginBottom="10dp"
            android:text="전체 선택" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_search_company_company_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fragment_common_side_padding"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/fragment_common_side_padding"></androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/activity_search_company_empty_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/activity_search_company_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_fileName="lottie/empty_box.json" />

            <TextView
                fontPath="@string/BMHANNAProOTF_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty_text"
                tools:ignore="MissingPrefix" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/activity_search_company_forward_btn"
        fontPath="@string/NanumBarunGothicBold_path"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="완료"
        android:textColor="@color/white"
        tools:ignore="MissingPrefix" />
</RelativeLayout>